rust/betelgeuze-sys/vendor/include/betelgeuze/engine.h

typedef int32_t bg_status;
typedef int32_t bg_backend;
/* python_reference remains outside the native ABI and is verifier-only. */

typedef int32_t bg_unit_system;
typedef int32_t bg_integrator;
/* Incomplete declarations are the only public handle representation. */
typedef struct bg_context bg_context;
typedef struct bg_system bg_system;
typedef struct bg_forcefield bg_forcefield;
typedef struct bg_simulation bg_simulation;
typedef struct bg_context_options {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_backend backend;
    bg_unit_system unit_system;
    int32_t device_ordinal;
    uint32_t reserved0;
    uint64_t flags;
    uint64_t reserved[4];
} bg_context_options;
/*
 * Input-only host SoA.  All non-null channels are deep-copied by
 * bg_system_create.  For particle_count > 0, positions, mass, and charge are
 * required.  Velocity channels must be either all null (native zero fill) or
 * all non-null.  Every supplied scalar must be finite, masses must be strictly
 * positive, and non-null channels must satisfy the platform alignment of
 * double.  For particle_count == 0 every data pointer may be null.
 */
typedef struct bg_particle_soa {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t particle_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    const double *position_x_angstrom;
    const double *position_y_angstrom;
    const double *position_z_angstrom;
    const double *velocity_x_angstrom_per_femtosecond;
    const double *velocity_y_angstrom_per_femtosecond;
    const double *velocity_z_angstrom_per_femtosecond;
    const double *mass_dalton;
    const double *charge_elementary;
    uint64_t reserved[4];
} bg_particle_soa;
/*
 * Read-only borrowed host view into a system-owned SoA.  Pointers remain valid
 * until the system is destroyed or a future ABI operation explicitly states
 * that it invalidates views.  Calls on one system must be externally
 * synchronized.  Access through borrowed pointers must also be synchronized
 * against mutating calls and destruction; the phrase "observe new values"
 * below never authorizes a concurrent read/write data race.  Empty views may
 * contain null data pointers.
 */
typedef struct bg_particle_soa_view {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t particle_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    const double *position_x_angstrom;
    const double *position_y_angstrom;
    const double *position_z_angstrom;
    const double *velocity_x_angstrom_per_femtosecond;
    const double *velocity_y_angstrom_per_femtosecond;
    const double *velocity_z_angstrom_per_femtosecond;
    const double *mass_dalton;
    const double *charge_elementary;
    uint64_t reserved[4];
} bg_particle_soa_view;
/*
 * Input-only host SoA used for transactional position replacement.  For a
 * non-empty system all channels are required, finite, and aligned for double.
 */
typedef struct bg_position_soa {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t particle_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    const double *x_angstrom;
    const double *y_angstrom;
    const double *z_angstrom;
    uint64_t reserved[4];
} bg_position_soa;
/*
 * Input-only force-field SoA, frozen as ABI v1.  Every channel associated
 * with a non-zero count is required, naturally aligned, and deep-copied by
 * bg_forcefield_create.  Atom indices are zero-based uint64 values.
 *
 * Bond:     0.5*k*(r-r0)^2
 * Angle:    0.5*k*(theta-theta0)^2, with the normalized dot product clamped
 *           to [-1+1e-12,1-1e-12] before acos.
 * Torsion:  amplitude*(1+cos(periodicity*phi-phase)), where b0=ri-rj,
 *           b1=rk-rj, b2=rl-rk, axis=b1/|b1|, v and w are b0 and b2
 *           projected perpendicular to axis, and
 *           phi=atan2(dot(cross(axis,v),w),dot(v,w)) in [-pi,pi].
 * LJ mixing uses sigma=(sigma_i+sigma_j)/2 and
 * epsilon=sqrt(epsilon_i*epsilon_j), followed by
 * 4*epsilon*((sigma/r)^12-(sigma/r)^6).  Coulomb is
 * C*qi*qj*exp(-kappa*r)/(dielectric*r), where qi/qj come from the associated
 * bg_system charge_elementary channel.  Both components are multiplied by
 * S=1 below switch_start, S=0 at and above cutoff, and inside the switch
 * interval S=1-10*x^3+15*x^4-6*x^5 for
 * x=(r-switch_start)/(cutoff-switch_start).  Pairs at exactly cutoff are
 * evaluated and multiplied by zero; only r>cutoff is skipped.
 * Explicit exclusions suppress both nonbonded components; topology does not
 * imply exclusions.  Pair scales must lie in [0,1].
 *
 * Orthorhombic minimum images use d-L*floor(d/L+0.5) for every bonded and
 * nonbonded displacement on axes selected by periodic_axes_mask.  When any
 * axis is periodic all three cell lengths must
 * be finite and positive, and cutoff must be strictly below half every
 * periodic length.  With no periodic axes, cell lengths must be either all
 * zero (no cell) or all finite and positive (a nonperiodic cell).
 *
 * Exclusion lookup precedes the minimum-distance check, so a coincident
 * excluded pair has exactly zero nonbonded energy.  Every other pair below
 * minimum_pair_distance_angstrom is rejected before cutoff handling.
 */
typedef struct bg_forcefield_soa_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t atom_count;
    bg_unit_system unit_system;
    uint32_t periodic_axes_mask;

    const double *sigma_angstrom;
    const double *epsilon_kcal_per_mol;

    uint64_t bond_count;
    const uint64_t *bond_atom_i;
    const uint64_t *bond_atom_j;
    const double *bond_equilibrium_angstrom;
    const double *bond_force_constant_kcal_per_mol_angstrom2;

    uint64_t angle_count;
    const uint64_t *angle_atom_i;
    const uint64_t *angle_atom_j;
    const uint64_t *angle_atom_k;
    const double *angle_equilibrium_radians;
    const double *angle_force_constant_kcal_per_mol_radian2;

    uint64_t torsion_count;
    const uint64_t *torsion_atom_i;
    const uint64_t *torsion_atom_j;
    const uint64_t *torsion_atom_k;
    const uint64_t *torsion_atom_l;
    const uint32_t *torsion_periodicity;
    const double *torsion_phase_radians;
    const double *torsion_amplitude_kcal_per_mol;

    uint64_t exclusion_count;
    const uint64_t *exclusion_atom_i;
    const uint64_t *exclusion_atom_j;

    uint64_t pair_scale_count;
    const uint64_t *pair_scale_atom_i;
    const uint64_t *pair_scale_atom_j;
    const double *pair_scale_lennard_jones;
    const double *pair_scale_coulomb;

    double cell_lengths_angstrom[3];
    double cutoff_angstrom;
    double switch_start_angstrom;
    double dielectric;
    double screening_kappa_per_angstrom;
    double minimum_pair_distance_angstrom;
    uint64_t reserved[4];
} bg_forcefield_soa_v1;
/* Caller-owned force output.  capacity and all channels are input fields;
 * particle_count is committed on success.  A null descriptor requests energy
 * only.  For the first particle_count elements, x/y/z channels must be
 * mutually non-overlapping and must not overlap either output descriptor. */
typedef struct bg_force_soa_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t particle_capacity;
    uint64_t particle_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    double *x_kcal_per_mol_angstrom;
    double *y_kcal_per_mol_angstrom;
    double *z_kcal_per_mol_angstrom;
    uint64_t reserved[4];
} bg_force_soa_v1;
/* Energy output in the frozen bond, angle, torsion, LJ, Coulomb order. */
typedef struct bg_energy_components_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    uint32_t reserved0;
    double harmonic_bond_kcal_per_mol;
    double harmonic_angle_kcal_per_mol;
    double periodic_torsion_kcal_per_mol;
    double lennard_jones_kcal_per_mol;
    double coulomb_kcal_per_mol;
    double total_kcal_per_mol;
    uint64_t reserved[4];
} bg_energy_components_v1;
/*
 * Canonical distance constraints.  Rows are deep-copied and canonicalized by
 * bg_simulation_create.  Atom indices are zero based, each target distance is
 * finite and positive, tolerance_angstrom is finite and positive, and
 * max_iterations is non-zero.  Duplicate unordered atom pairs are rejected.
 * tolerance_angstrom controls SHAKE distance residuals and
 * velocity_tolerance_angstrom_per_femtosecond separately controls RATTLE.
 * Every target must be below half each periodic axis length.  Rows are
 * required to be independent; duplicates and detectable
 * singular/nonconvergent initial states are rejected.  SHAKE/RATTLE process
 * canonical pair order and use the force field's exact
 * d-L*floor(d/L+0.5) orthorhombic minimum-image rule while positions remain
 * unwrapped.
 */
typedef struct bg_distance_constraints_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t constraint_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    const uint64_t *atom_i;
    const uint64_t *atom_j;
    const double *distance_angstrom;
    double tolerance_angstrom;
    double velocity_tolerance_angstrom_per_femtosecond;
    uint32_t max_iterations;
    uint32_t reserved1;
    uint64_t reserved[4];
} bg_distance_constraints_v1;
/*
 * Dynamics configuration in canonical units.  The timestep must be finite
 * and positive, including a representable positive half-step.  Temperature
 * and friction are validated as finite and non-negative for both integrators;
 * Velocity Verlet canonicalizes its unused temperature, friction, and seed to
 * zero for semantic checkpoint fingerprints.  Langevin BAOAB's counter-based
 * Philox4x32-10 stream is keyed by random_seed and the absolute step, so
 * checkpoint continuation consumes exactly the same samples and keeps no
 * hidden spare-normal cache.
 */
typedef struct bg_simulation_options_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    bg_integrator integrator;
    double timestep_femtoseconds;
    double temperature_kelvin;
    double friction_per_femtosecond;
    uint64_t random_seed;
    uint64_t reserved[4];
} bg_simulation_options_v1;
/*
 * Deterministic steepest-descent and bounded Armijo line-search settings.
 * The step has units angstrom^2*mol/kcal because it multiplies force.  Energy
 * and maximum-force convergence thresholds use kcal/mol and
 * kcal/(mol*angstrom), respectively.  All tolerances are non-negative;
 * initial/minimum step and both iteration bounds are positive; 0<armijo<1 and
 * 0<backtrack<1.  An energy tolerance of zero disables energy convergence; a
 * force tolerance of zero requires an exactly zero projected force.
 */
typedef struct bg_minimizer_options_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    uint32_t reserved0;
    uint64_t max_iterations;
    uint32_t max_line_search_steps;
    uint32_t reserved1;
    double initial_step_angstrom2_mol_per_kcal;
    double minimum_step_angstrom2_mol_per_kcal;
    double energy_tolerance_kcal_per_mol;
    double force_tolerance_kcal_per_mol_angstrom;
    double armijo_coefficient;
    double backtrack_factor;
    uint64_t reserved[4];
} bg_minimizer_options_v1;
typedef struct bg_minimization_report_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    uint32_t reserved0;
    uint64_t iterations;
    uint32_t converged;
    uint32_t reserved1;
    double initial_potential_kcal_per_mol;
    double final_potential_kcal_per_mol;
    double maximum_force_kcal_per_mol_angstrom;
    uint64_t reserved[4];
} bg_minimization_report_v1;
/* maximum_force is the Euclidean tangential projection used by constrained
 * Cartesian steepest descent, rather than an unprojected constraint reaction. */

/*
 * Dynamics energies use deterministic float64 evaluation.  Kinetic energy is
 * 0.5/4.184e-4 * sum(mass_dalton*velocity_angstrom_per_fs^2).  Temperature is
 * 2*K/(DOF*R), R=0.0019872042586408316 kcal/(mol*K), with
 * DOF=3*particle_count-constraint_count and no implicit COM removal.
 */
typedef struct bg_dynamics_report_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    uint32_t reserved0;
    uint64_t steps_completed;
    uint64_t absolute_step;
    uint64_t degrees_of_freedom;
    double potential_kcal_per_mol;
    double kinetic_kcal_per_mol;
    double total_kcal_per_mol;
    double temperature_kelvin;
    uint64_t reserved[4];
} bg_dynamics_report_v1;
/*
 * Backend selection is explicit.  AUTO remains the deterministic CPU backend
 * in ABI v1.3.  HIP is reported available only when the native library was
 * built with its HIP provider, the requested runtime device supports
 * binary64, and the library contains a compatible device code object.
 * An explicit unavailable HIP request never runs CPU.  The availability
 * output is initialized to zero; HIP runtime discovery failures are returned
 * as an error status instead of being reported as an unavailable device.
 */
BG_API bg_status BG_CALL bg_backend_is_available(
    bg_backend backend,
    int32_t device_ordinal,
    uint8_t *available) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_context_create(
    const bg_context_options *options,
    bg_context **out_context) BG_NOEXCEPT;
BG_API void BG_CALL bg_context_destroy(bg_context *context) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_context_get_backend(
    const bg_context *context,
    bg_backend *backend) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_context_get_device_ordinal(
    const bg_context *context,
    int32_t *device_ordinal) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_context_get_unit_system(
    const bg_context *context,
    bg_unit_system *unit_system) BG_NOEXCEPT;
/* A system owns its host SoA and has no parent-handle lifetime dependency. */
BG_API bg_status BG_CALL bg_system_create(
    const bg_particle_soa *particles,
    bg_system **out_system) BG_NOEXCEPT;
BG_API void BG_CALL bg_system_destroy(bg_system *system) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_system_get_particle_count(
    const bg_system *system,
    uint64_t *particle_count) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_system_get_unit_system(
    const bg_system *system,
    bg_unit_system *unit_system) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_system_get_particles(
    const bg_system *system,
    bg_particle_soa_view *out_view) BG_NOEXCEPT;
/*
 * On success this atomically replaces all three position channels without
 * changing the addresses held by existing bg_particle_soa_view values; those
 * views observe the new coordinates after the synchronized call returns.  On
 * failure the system and existing views are unchanged.
 */
BG_API bg_status BG_CALL bg_system_set_positions(
    bg_system *system,
    const bg_position_soa *positions) BG_NOEXCEPT;
/* A force-field handle owns validated parameter SoAs and has no parent handle. */
BG_API bg_status BG_CALL bg_forcefield_create(
    const bg_forcefield_soa_v1 *parameters,
    bg_forcefield **out_forcefield) BG_NOEXCEPT;
BG_API void BG_CALL bg_forcefield_destroy(
    bg_forcefield *forcefield) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_forcefield_get_atom_count(
    const bg_forcefield *forcefield,
    uint64_t *atom_count) BG_NOEXCEPT;
/*
 * Dispatch through the explicitly selected context backend. The C++ CPU
 * reference, independent Rust CPU backend, and hip_safe qualification backend
 * use binary64 with a fixed serial accumulation order and analytic forces
 * defined as -dU/d(position). hip_safe is available only when a compiled,
 * explicitly qualified GPU architecture matches the requested runtime device;
 * it never falls back to CPU. hip_fast is the separately selected parallel HIP
 * lane and likewise never falls back. Output buffers are transactional: no
 * output value changes unless the complete evaluation succeeds. Energy-only
 * evaluation does not require differentiability of a zero-length harmonic
 * bond; requesting forces for that geometry returns
 * BG_STATUS_NUMERICAL_ERROR.
 */
BG_API bg_status BG_CALL bg_context_evaluate(
    const bg_context *context,
    const bg_system *system,
    const bg_forcefield *forcefield,
    bg_energy_components_v1 *out_energy,
    bg_force_soa_v1 *out_forces) BG_NOEXCEPT;
/*
 * A simulation deep-owns independent copies of the system, force field,
 * canonicalized constraints, and integration configuration.  A null
 * constraints pointer means no constraints.  For a constrained simulation,
 * creation transactionally SHAKE-projects copied positions and RATTLE-projects
 * copied velocities before returning.  It has no
 * parent-handle lifetime dependency.  Particle views remain valid until the
 * simulation is destroyed and observe committed minimize/integrate/load
 * results after the synchronized call returns without changing the borrowed
 * channel addresses.  Mutating calls are whole-call
 * transactional: every failure leaves positions, velocities, and absolute
 * step unchanged.  The supplied context selects the force evaluator and an
 * unavailable/erroring HIP backend never falls back to CPU.
 */
BG_API bg_status BG_CALL bg_simulation_create(
    const bg_system *system,
    const bg_forcefield *forcefield,
    const bg_distance_constraints_v1 *constraints,
    const bg_simulation_options_v1 *options,
    bg_simulation **out_simulation) BG_NOEXCEPT;
BG_API void BG_CALL bg_simulation_destroy(
    bg_simulation *simulation) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_simulation_get_particles(
    const bg_simulation *simulation,
    bg_particle_soa_view *out_view) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_simulation_get_absolute_step(
    const bg_simulation *simulation,
    uint64_t *absolute_step) BG_NOEXCEPT;
/* Minimization preserves absolute step.  It preserves velocity bits when
 * unconstrained; constrained minimization performs a final mass-weighted
 * RATTLE projection against its new geometry. */
BG_API bg_status BG_CALL bg_context_minimize(
    const bg_context *context,
    bg_simulation *simulation,
    const bg_minimizer_options_v1 *options,
    bg_minimization_report_v1 *out_report) BG_NOEXCEPT;
/* Integrating zero steps evaluates and reports the current energy but is a
 * strict dynamic-state no-op; backend or numerical evaluation errors are
 * still returned transactionally. */
BG_API bg_status BG_CALL bg_context_integrate(
    const bg_context *context,
    bg_simulation *simulation,
    uint64_t step_count,
    bg_dynamics_report_v1 *out_report) BG_NOEXCEPT;
/*
 * Checkpoint wire format v1 is canonical little-endian and padding-free:
 * magic "BGDYN001" at bytes 0..7, uint32 format/version and header size at
 * 8/12, uint64 total size/particle count/absolute step at 16/24/32, semantic
 * fingerprint at 40..71, integrity digest at 72..103, then float64 SoA payload
 * in x,y,z,vx,vy,vz channel order.  The fixed header is 104 bytes.  SHA-256
 * covers every serialized byte with bytes 72..103 zeroed, and a
 * separate semantic SHA-256 fingerprint binds the complete force field,
 * masses, charges, constraints, and integration configuration.  Load
 * validates everything, including an exact static-fingerprint match with the
 * existing destination simulation, before transactionally committing dynamic
 * state.
 */
BG_API bg_status BG_CALL bg_simulation_checkpoint_size(
    const bg_simulation *simulation,
    uint64_t *required_size) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_simulation_checkpoint_write(
    const bg_simulation *simulation,
    void *buffer,
    uint64_t buffer_capacity,
    uint64_t *written_size) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_simulation_checkpoint_load(
    bg_simulation *simulation,
    const void *buffer,
    uint64_t buffer_size) BG_NOEXCEPT;