rust/betelgeuze-sys/src/lib.rs


    pub fn bg_backend_is_available(
        backend: bg_backend,
        device_ordinal: i32,
        available: *mut u8,
    ) -> bg_status;
    pub fn bg_context_create(
        options: *const bg_context_options,
        out_context: *mut *mut bg_context,
    ) -> bg_status;
    pub fn bg_context_destroy(context: *mut bg_context);
    pub fn bg_context_get_backend(
        context: *const bg_context,
        backend: *mut bg_backend,
    ) -> bg_status;
    pub fn bg_context_get_device_ordinal(
        context: *const bg_context,
        device_ordinal: *mut i32,
    ) -> bg_status;
    pub fn bg_context_get_unit_system(
        context: *const bg_context,
        unit_system: *mut bg_unit_system,
    ) -> bg_status;

    pub fn bg_system_create(
        particles: *const bg_particle_soa,
        out_system: *mut *mut bg_system,
    ) -> bg_status;
    pub fn bg_system_destroy(system: *mut bg_system);
    pub fn bg_system_get_particle_count(
        system: *const bg_system,
        particle_count: *mut u64,
    ) -> bg_status;
    pub fn bg_system_get_unit_system(
        system: *const bg_system,
        unit_system: *mut bg_unit_system,
    ) -> bg_status;
    pub fn bg_system_get_particles(
        system: *const bg_system,
        out_view: *mut bg_particle_soa_view,
    ) -> bg_status;
    pub fn bg_system_set_positions(
        system: *mut bg_system,
        positions: *const bg_position_soa,
    ) -> bg_status;

    pub fn bg_forcefield_create(
        parameters: *const bg_forcefield_soa_v1,
        out_forcefield: *mut *mut bg_forcefield,
    ) -> bg_status;
    pub fn bg_forcefield_destroy(forcefield: *mut bg_forcefield);
    pub fn bg_forcefield_get_atom_count(
        forcefield: *const bg_forcefield,
        atom_count: *mut u64,
    ) -> bg_status;

    pub fn bg_context_evaluate(
        context: *const bg_context,
        system: *const bg_system,
        forcefield: *const bg_forcefield,
        out_energy: *mut bg_energy_components_v1,
        out_forces: *mut bg_force_soa_v1,
    ) -> bg_status;

    pub fn bg_simulation_create(
        system: *const bg_system,
        forcefield: *const bg_forcefield,
        constraints: *const bg_distance_constraints_v1,
        options: *const bg_simulation_options_v1,
        out_simulation: *mut *mut bg_simulation,
    ) -> bg_status;
    pub fn bg_simulation_destroy(simulation: *mut bg_simulation);
    pub fn bg_simulation_get_particles(
        simulation: *const bg_simulation,
        out_view: *mut bg_particle_soa_view,
    ) -> bg_status;
    pub fn bg_simulation_get_absolute_step(
        simulation: *const bg_simulation,
        absolute_step: *mut u64,
    ) -> bg_status;
    pub fn bg_context_minimize(
        context: *const bg_context,
        simulation: *mut bg_simulation,
        options: *const bg_minimizer_options_v1,
        out_report: *mut bg_minimization_report_v1,
    ) -> bg_status;
    pub fn bg_context_integrate(
        context: *const bg_context,
        simulation: *mut bg_simulation,
        step_count: u64,
        out_report: *mut bg_dynamics_report_v1,
    ) -> bg_status;
    pub fn bg_simulation_checkpoint_size(
        simulation: *const bg_simulation,
        required_size: *mut u64,
    ) -> bg_status;
    pub fn bg_simulation_checkpoint_write(
        simulation: *const bg_simulation,
        buffer: *mut core::ffi::c_void,
        buffer_capacity: u64,
        written_size: *mut u64,
    ) -> bg_status;
    pub fn bg_simulation_checkpoint_load(
        simulation: *mut bg_simulation,
        buffer: *const core::ffi::c_void,
        buffer_size: u64,
    ) -> bg_status;
}
